unpackaged/main/default/objects/project_cloud__Project_Phase__c/project_cloud__Project_Phase__c.object-meta.xml
<CustomObject>
    <description>Phases that exist within a project, each phase consists of a series of project tasks grouping them together.</description>
    <label>Project Phase</label>
    <nameField>
        <label>Project Phase Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Phases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>