unpackaged/main/default/objects/project_cloud__Project_Phase__c/fields/Baseline_hours__c.field-meta.xml
<CustomField>
    <fullName>Baseline_hours__c</fullName>
    <label>Baseline hours</label>
    <summarizedField>project_cloud__Project_Task__c.Baseline_Hours__c</summarizedField>
    <summaryForeignKey>project_cloud__Project_Task__c.project_cloud__Project_Phase__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>