unpackaged/main/default/objects/project_cloud__Project_Phase__c/fields/ccpe_ocp__Opportunity_Product__c.field-meta.xml
<CustomField>
    <fullName>ccpe_ocp__Opportunity_Product__c</fullName>
    <label>Opportunity Product</label>
    <length>18</length>
    <type>Text</type>
</CustomField>