unpackaged/main/default/objects/project_cloud__Project_Phase__c/fields/ccpe_r__Cost__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Cost__c</fullName>
    <label>Calculated Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>