unpackaged/main/default/objects/project_cloud__Project_Phase__c/fields/ccpe_r__Retainer__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Retainer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Retainer</label>
    <referenceTo>ccpe_r__Retainer__c</referenceTo>
    <relationshipLabel>Project Phases</relationshipLabel>
    <relationshipName>Project_Phases</relationshipName>
    <type>Lookup</type>
</CustomField>