unpackaged/main/default/objects/project_cloud__Project_Phase__c/fields/EV_Hours__c.field-meta.xml
<CustomField>
    <fullName>EV_Hours__c</fullName>
    <label>EV Hours</label>
    <summarizedField>project_cloud__Project_Task__c.EV_Hours__c</summarizedField>
    <summaryForeignKey>project_cloud__Project_Task__c.project_cloud__Project_Phase__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>