unpackaged/main/default/objects/project_cloud__Project_Phase__c/fields/Plan_Value__c.field-meta.xml
<CustomField>
    <fullName>Plan_Value__c</fullName>
    <label>Plan Value</label>
    <summarizedField>project_cloud__Project_Task__c.Plan_Value__c</summarizedField>
    <summaryForeignKey>project_cloud__Project_Task__c.project_cloud__Project_Phase__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>