unpackaged/main/default/objects/project_cloud__Project_Phase__c/fields/project_cloud__Autonomous_End__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Autonomous_End__c</fullName>
    <description>User entered value indicating the desired end date of the Sprint. This value of this date is not used when calculating the Project End Date</description>
    <inlineHelpText>The end date desired for the Project Phase. (NOTE this value will ignored if the phase has any Project Tasks)</inlineHelpText>
    <label>Sprint End Date</label>
    <type>Date</type>
</CustomField>