unpackaged/main/default/objects/project_cloud__Project_Phase__c/fields/project_cloud__Autonomous_Start__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Autonomous_Start__c</fullName>
    <description>User entered value indicating the desired start date of the Sprint. This value of this date is not used when calculating the Project Start Date</description>
    <inlineHelpText>The start date desired for the Project Phase. (NOTE this value will ignored if the phase has any Project Tasks)</inlineHelpText>
    <label>Sprint Start Date</label>
    <type>Date</type>
</CustomField>