unpackaged/main/default/objects/project_cloud__Project_Phase__c/fields/project_cloud__Cloned_From__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Cloned_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a system field indicating which phase template (or phase) this phase was cloned from</description>
    <inlineHelpText>Shows the Name of a phase/template that the Phase was cloned from.</inlineHelpText>
    <label>Cloned From</label>
    <referenceTo>project_cloud__Project_Phase__c</referenceTo>
    <relationshipLabel>Cloned Phases</relationshipLabel>
    <relationshipName>Cloned_Phases</relationshipName>
    <type>Lookup</type>
</CustomField>