unpackaged/main/default/objects/project_cloud__Project_Phase__c/fields/project_cloud__End__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__End__c</fullName>
    <description>Rollup summary of the latest end date of the all the Project Tasks in this Project Phase</description>
    <inlineHelpText>The calculated end date of the project phase based on the end date of the last project task within the project phase</inlineHelpText>
    <label>End (Rollup)</label>
    <summarizedField>project_cloud__Project_Task__c.project_cloud__End__c</summarizedField>
    <summaryFilterItems>
        <field>project_cloud__Project_Task__c.project_cloud__IsOn_Hold__c</field>
        <operation>notEqual</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>project_cloud__Project_Task__c.project_cloud__Project_Phase__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>