unpackaged/main/default/objects/project_cloud__Project_Phase__c/fields/project_cloud__Estimated_Hours__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Estimated_Hours__c</fullName>
    <inlineHelpText>Shows a rollup summary of Estimated Hours on tasks under the phase.</inlineHelpText>
    <label>Estimated Hours</label>
    <summarizedField>project_cloud__Project_Task__c.project_cloud__Estimated_Hours__c</summarizedField>
    <summaryFilterItems>
        <field>project_cloud__Project_Task__c.project_cloud__IsOn_Hold__c</field>
        <operation>notEqual</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>project_cloud__Project_Task__c.project_cloud__Project_Phase__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>