unpackaged/main/default/objects/project_cloud__Project_Phase__c/fields/project_cloud__Final_End__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Final_End__c</fullName>
    <formula>IF(ISBLANK(project_cloud__End__c), project_cloud__Autonomous_End__c, project_cloud__End__c)</formula>
    <inlineHelpText>Shows the calculated end date of the last task in the phase.</inlineHelpText>
    <label>End</label>
    <type>Date</type>
</CustomField>