unpackaged/main/default/objects/project_cloud__Project_Phase__c/fields/project_cloud__Final_Start__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Final_Start__c</fullName>
    <formula>IF(ISBLANK(project_cloud__Start__c), project_cloud__Autonomous_Start__c, project_cloud__Start__c)</formula>
    <inlineHelpText>Shows the calculated start date of the first task in the phase.</inlineHelpText>
    <label>Start</label>
    <type>Date</type>
</CustomField>