unpackaged/main/default/objects/project_cloud__Project_Phase__c/fields/project_cloud__Late_Task_Start__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Late_Task_Start__c</fullName>
    <description>The start date of the first unstarted task.</description>
    <inlineHelpText>Shows the calculated end date of the first task in the phase with a &quot;Not Started&quot; status.</inlineHelpText>
    <label>Late Starting Task  Date (System)</label>
    <summarizedField>project_cloud__Project_Task__c.project_cloud__Start__c</summarizedField>
    <summaryFilterItems>
        <field>project_cloud__Project_Task__c.project_cloud__Status_Enum__c</field>
        <operation>equals</operation>
        <value>2</value>
    </summaryFilterItems>
    <summaryForeignKey>project_cloud__Project_Task__c.project_cloud__Project_Phase__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>