unpackaged/main/default/objects/project_cloud__Project_Phase__c/fields/project_cloud__Position__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Position__c</fullName>
    <inlineHelpText>Determines the position in the current phases</inlineHelpText>
    <label>Position</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>