unpackaged/main/default/objects/project_cloud__Project_Phase__c/fields/project_cloud__Project__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Project__c</fullName>
    <description>M/D relationship determining which Project that this Project Phase belongs to</description>
    <inlineHelpText>The project that this project phase belongs to</inlineHelpText>
    <label>Project</label>
    <referenceTo>project_cloud__Project__c</referenceTo>
    <relationshipLabel>Project Phases</relationshipLabel>
    <relationshipName>Project_Phases</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>