unpackaged/main/default/objects/project_cloud__Project_Phase__c/fields/project_cloud__Sorting_Hash__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Sorting_Hash__c</fullName>
    <description>This field is used for sorting Project Phases in the CCProjex Enterprise default order of Start, End, Name</description>
    <formula>/*When the sort alphabetically flag is set, the sorting hash should not include the date*/
IF($Setup.project_cloud__Configuration_Options__c.project_cloud__Sort_Projects_Alphabetically__c,
	&#39;&#39;,
/*ELSE*/
	BLANKVALUE(TEXT(project_cloud__Final_Start__c), &#39;9999-99-99&#39;) &amp; BLANKVALUE(TEXT(project_cloud__Final_End__c), &#39;9999-99-99&#39;)
) &amp; Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field can be used to sort Project Phases using the CCProjex Enterprise default order</inlineHelpText>
    <label>Sorting Column</label>
    <type>Text</type>
</CustomField>