unpackaged/main/default/objects/project_cloud__Project_Phase__c/fields/project_cloud__Status__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Status__c</fullName>
    <description>Using the minimum and maximum rollup status values determine the overall status of the Project Phase</description>
    <formula>IF(project_cloud__Task_Status_Maximum__c &lt;= 0,
	$Label.project_cloud__project_status_completed
	,
	IF(ISBLANK(project_cloud__Task_Status_Minimum__c) || (project_cloud__Task_Status_Minimum__c = project_cloud__Task_Status_Maximum__c &amp;&amp; project_cloud__Task_Status_Minimum__c &gt; 1),
		$Label.project_cloud__project_status_not_started
		,
		$Label.project_cloud__project_status_in_progress
	)
)</formula>
    <inlineHelpText>The status of the project phase derived from the status of the project tasks within the phase. &#39;Not Started&#39; if no task has commenced, &#39;In Progress&#39; if one of more tasks have commenced and are still in progress, or &#39;Completed&#39; if all tasks are completed</inlineHelpText>
    <label>Status</label>
    <type>Text</type>
</CustomField>