unpackaged/main/default/objects/project_cloud__Project_Phase__c/fields/project_cloud__Status_Enum__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Status_Enum__c</fullName>
    <description>This is a hidden field used by the Project rollup summary to determine the status of all the phases in the Project. This is a system field and must not be visible.</description>
    <formula>IF(project_cloud__Task_Status_Minimum__c = project_cloud__Task_Status_Maximum__c &amp;&amp; project_cloud__Task_Status_Minimum__c = 0,
	0,
	IF(project_cloud__Task_Status_Minimum__c = project_cloud__Task_Status_Maximum__c &amp;&amp; project_cloud__Task_Status_Minimum__c &gt; 1,
		2,
		1
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is a system field and must not be visible.</inlineHelpText>
    <label>Status Enum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>