unpackaged/main/default/objects/project_cloud__Project_Phase__c/fields/project_cloud__Subscribed__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Subscribed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this indicates the Project Phase has been fully subscribed. i.e there are no more subscriptions that need to be created</description>
    <inlineHelpText>When checked, this indicates that the Project Phase this task belongs to has been marked fully subscribed. (This is only applicable if allocating at the phase level)</inlineHelpText>
    <label>Fully Subscribed</label>
    <type>Checkbox</type>
</CustomField>