unpackaged/main/default/objects/project_cloud__Project_Phase__c/fields/project_cloud__Task_Status_Maximum__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Task_Status_Maximum__c</fullName>
    <description>System calculated field used to derive the project phase status. This is a system field and should not be visible. The status field is what should be used.</description>
    <inlineHelpText>A rollup from Task Status&#39; used to drive overall phase status.</inlineHelpText>
    <label>Task Status Maximum</label>
    <summarizedField>project_cloud__Project_Task__c.project_cloud__Status_Enum__c</summarizedField>
    <summaryForeignKey>project_cloud__Project_Task__c.project_cloud__Project_Phase__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>