unpackaged/main/default/objects/project_cloud__Project_Phase__c/fields/PV_Hours__c.field-meta.xml
<CustomField>
    <fullName>PV_Hours__c</fullName>
    <label>PV Hours</label>
    <summarizedField>project_cloud__Project_Task__c.PV_Hours__c</summarizedField>
    <summaryForeignKey>project_cloud__Project_Task__c.project_cloud__Project_Phase__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>