unpackaged/main/default/objects/project_cloud__Project_Phase__c/listViews/project_cloud__All_Project_Phases.listView-meta.xml
<ListView>
    <fullName>project_cloud__All_Project_Phases</fullName>
    <columns>NAME</columns>
    <columns>project_cloud__Project__c</columns>
    <columns>project_cloud__Status__c</columns>
    <columns>project_cloud__Start__c</columns>
    <columns>project_cloud__End__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>